--- a/rock-paper-scissors-web/index.html
+++ b/rock-paper-scissors-web/index.html
@@ -5,15 +5,28 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--    CSS Only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
-  <h1>Rock, Paper, Scissors</h1>
-  <hr>
+<div class="container">
+    <h1 class="mt-4">Rock, Paper, Scissors</h1>
+    <hr>
 
+    <p id="player_choice">&nbsp;</p>
+    <p id="computer_choice">&nbsp;</p>
+    <p id="round_result">&nbsp;</p>
 
- <button>Rock</button>
- <button>Paper</button>
- <button>Scissors</button>
+    <hr>
+    <p>Choose Rock, Paper, or Scissors</p>
+    <br>
+    <br>
+
+    <button class="btn btn-outline-secondary">Rock</button>
+    <button class="btn btn-outline-danger">Paper</button>
+    <button class="btn btn-outline-success">Scissors</button>
+</div>
 </body>
 </html>
