--- a/rock-paper-scissors-web/index.html
+++ b/rock-paper-scissors-web/index.html
@@ -34,14 +34,16 @@
             .then(response => response.json())
             .then(data => {
                 console.log(data)
+                if (x == 1) {
+                    document.getElementById("player_choice").innerHTML = "You clicked PAPER"
+                } else if (x == 2) {
+                    document.getElementById("player_choice").innerHTML = "You clicked SCISSORS"
+                } else {
+                    document.getElementById("player_choice").innerHTML = "You clicked ROCK"
+                }
+                document.getElementById("computer_choice").innerHTML = data.computer_choice;
+                document.getElementById("round_result").innerHTML = data.round_result;
             })
-        if (x == 1) {
-            document.getElementById("player_choice").innerHTML = "You clicked paper"
-        } else if (x == 2) {
-            document.getElementById("player_choice").innerHTML = "You clicked scissors"
-        } else {
-            document.getElementById("player_choice").innerHTML = "You clicked rock"
-        }
     }
 </script>
 </body>
