Minor CSS changes

--- a/rock-paper-scissors-web/index.html
+++ b/rock-paper-scissors-web/index.html
@@ -11,23 +11,23 @@
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
-    <div class="container">
-        <h1 class="mt-4">Rock, Paper, Scissors</h1>
-        <hr>
+<div class="container">
+    <h1 class="mt-4">Rock, Paper, Scissors</h1>
+    <hr>
 
-        <p id="player_choice">&nbsp;</p>
-        <p id="computer_choice">&nbsp;</p>
-        <p id="round_result">&nbsp;</p>
+    <p id="player_choice">&nbsp;</p>
+    <p id="computer_choice">&nbsp;</p>
+    <p id="round_result" class="text-danger">&nbsp;</p>
 
-        <hr>
-        <p>Choose Rock, Paper, or Scissors</p>
-        <br>
-        <br>
+    <hr>
+    <p>Choose Rock, Paper, or Scissors</p>
+    <br>
+    <br>
 
-        <button class="btn btn-outline-secondary" onclick="choose(0)">Rock</button>
-        <button class="btn btn-outline-danger" onclick="choose(1)">Paper</button>
-        <button class="btn btn-outline-success" onclick="choose(2)">Scissors</button>
-    </div>
+    <button class="btn btn-outline-secondary" onclick="choose(0)">Rock</button>
+    <button class="btn btn-outline-danger" onclick="choose(1)">Paper</button>
+    <button class="btn btn-outline-success" onclick="choose(2)">Scissors</button>
+</div>
 <script>
     function choose(x) {
         fetch("/play?c=" + x)
